package com.hts.order.service.order;

import com.hts.order.cache.OrderIndexCache;
import com.hts.order.client.AccountGrpcClient;
import com.hts.order.core.protocol.PacketHeader;
import com.hts.order.core.TransactionExecutor;
import com.hts.order.global.ResponseUtil;
import com.hts.order.metrics.BufferedLogger;
import com.hts.order.metrics.MetricsCollector;
import com.hts.order.metrics.SamplingLogger;
import com.hts.order.outbox.OrderOutboxQueue;
import com.hts.order.proto.OrderProto;
import com.hts.order.repository.OrderRepository;
import com.hts.order.repository.SessionRepository;
import com.hts.order.service.exception.ServiceException;
import com.hts.order.shard.OrderShardExecutor;
import io.micrometer.core.instrument.Timer;
import io.netty.channel.Channel;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

import java.math.BigDecimal;

/**
 * âš ï¸ ì¤‘ìš” ì œì•½ì‚¬í•­:
 * - ì´ í´ë˜ìŠ¤ì˜ ë©”ì„œë“œëŠ” ë°˜ë“œì‹œ OrderShardExecutorì˜ ì›Œì»¤ ìŠ¤ë ˆë“œì—ì„œë§Œ í˜¸ì¶œë˜ì–´ì•¼ í•¨
 * - Netty I/O ìŠ¤ë ˆë“œë‚˜ blockingPoolì—ì„œ ì§ì ‘ í˜¸ì¶œ ê¸ˆì§€
 * - ì´ìœ : gRPC ë™ê¸° í˜¸ì¶œë¡œ ì¸í•œ ìŠ¤ë ˆë“œ ë¸”ë¡œí‚¹ì´ ìƒ¤ë“œë³„ë¡œ ê²©ë¦¬ë˜ì–´ì•¼ í•¨
 * - ìœ„ë°˜ ì‹œ: gRPC ì§€ì—°ì´ ì „ì²´ ì„œë²„ë¡œ ì „íŒŒë˜ì–´ ìˆœì„œ ë³´ì¥ ê¹¨ì§
 */
public class OrderService implements OrderShardExecutor.OrderTaskHandler {
    private static final Logger log = LoggerFactory.getLogger(OrderService.class);

    // ìš”ì²­ 100ê°œë§ˆë‹¤ 1ë²ˆë§Œ ì°ëŠ” ìƒ˜í”Œë§ ë¡œê±°
    private static final SamplingLogger slowLog = new SamplingLogger(log, 500);
    // ì„¸ë¶€ íƒ€ì„ë¼ì¸ì€ 600ì¤„ ìŒ“ì´ë©´ í•œ ë²ˆì— ì°ëŠ” ë²„í¼
    private static final BufferedLogger traceLog = new BufferedLogger(log);

    // ğŸŒŸ íŠ¸ë ˆì´ìŠ¤ ìƒ˜í”Œë§ ë¹„ìœ¨ (1/N) - 500ê°œ ìš”ì²­ë§ˆë‹¤ 1ê°œ íŠ¸ë ˆì´ì‹±
    private static final int TRACE_SAMPLE_RATE = 500;

    // ğŸŒŸ ThreadLocalì„ ì‚¬ìš©í•˜ì—¬ ì›Œì»¤ ìŠ¤ë ˆë“œë³„ ìš”ì²­ ì¹´ìš´íŠ¸ ê¸°ë¡
    private final ThreadLocal<int[]> requestCounter = ThreadLocal.withInitial(() -> new int[1]);

    private final TransactionExecutor transactionExecutor;
    private final AccountGrpcClient accountClient;
    private final OrderRepository orderRepository;
    private final SessionRepository sessionRepository;
    private final OrderIndexCache orderIndexCache;
    private final OrderOutboxQueue outboxQueue;
    private final MetricsCollector metrics;

    public OrderService(
            TransactionExecutor transactionExecutor,
            AccountGrpcClient accountClient,
            OrderRepository orderRepository,
            SessionRepository sessionRepository,
            OrderIndexCache orderIndexCache,
            OrderOutboxQueue outboxQueue,
            MetricsCollector metrics) {
        this.transactionExecutor = transactionExecutor;
        this.accountClient = accountClient;
        this.orderRepository = orderRepository;
        this.sessionRepository = sessionRepository;
        this.orderIndexCache = orderIndexCache;
        this.outboxQueue = outboxQueue;
        this.metrics = metrics;
    }

    @Override
    public void handle(OrderShardExecutor.OrderTask task, long orderId) {
        int method = task.header().getMethodId();
        if (method == 1) {
            handlePlace(task, orderId);
        } else if (method == 2) {
            handleCancel(task);
        } else {
            throw new ServiceException("Unknown method", task.header(), 400);
        }
    }


    /**
     * ì£¼ë¬¸ ì ‘ìˆ˜ ì²˜ë¦¬
     * @param task DispatchHandlerì—ì„œ ìƒ¤ë“œ ë¼ìš°íŒ…ëœ ì‘ì—…
     * @param orderId ì›Œì»¤ë³„ generatorì—ì„œ ìƒì„±ëœ ì£¼ë¬¸ ID
     */
    private void handlePlace(OrderShardExecutor.OrderTask task, long orderId) {
        OrderPlaceDto dto = (OrderPlaceDto) task.dto();
        PacketHeader header = task.header();
        Channel channel = task.channel();

        long startTime = System.nanoTime();
        Timer.Sample sample = metrics.startTimer();
        long correlationId = header.getCorrelationId();

        // ------------------------- ğŸŒŸ í•µì‹¬ ë³€ê²½ ë¡œì§: íŠ¸ë ˆì´ì‹± í™œì„±í™” -------------------------
        boolean traceEnabled = false;
        int[] count = requestCounter.get();
        count[0]++;
        if (count[0] >= TRACE_SAMPLE_RATE) {
            count[0] = 0;
            traceLog.setTracing(true); // í˜„ì¬ ì›Œì»¤ ìŠ¤ë ˆë“œì—ì„œ íŠ¸ë ˆì´ì‹± ì‹œì‘
            traceEnabled = true;
        }
        // ---------------------------------------------------------------------------------

        // ğŸŒŸ isTracingEnabled()ë¥¼ ì‚¬ìš©í•˜ì—¬ ë¡œê·¸ ê¸°ë¡ ì—¬ë¶€ë¥¼ í™•ì¸
        if (traceEnabled) {
            traceLog.add("corrId=" + correlationId + " [0.START] Symbol=" + dto.symbol() +
                    ", shard=" + task.shardId() + ", subKey=" + task.subKey());
        }

        slowLog.info("corrId={} [START] PlaceOrder sessionId={}", correlationId, dto.sessionId());
        try {
            // 1. Session validation & get accountId
            long t1 = System.nanoTime();
            Long accountId = sessionRepository.getAccountId(dto.sessionId());
            long sessionLookupMs = (System.nanoTime() - t1) / 1_000_000;

            if (accountId == null) {
                log.warn("corrId={} [FAIL] Invalid session: sessionId={}, sessionLookup={}ms",
                         correlationId, dto.sessionId(), sessionLookupMs);
                metrics.recordOrderRequest(header.getMethodId(), "INVALID_SESSION");
                ResponseUtil.sendError(channel, header, 401, "Invalid session");
                return;
            }
            traceLog.add("corrId=" + correlationId + " [1.SESSION] accountId=" + accountId +
                    ", lookup=" + sessionLookupMs + "ms");

            // 2. OrderIdëŠ” ì´ë¯¸ ì›Œì»¤ì—ì„œ ìƒì„±ë¨ (lock-free)
            int shardId = task.shardId();
            traceLog.add("corrId=" + correlationId + " [2.ID_GEN] orderId=" + orderId +
                    ", shardId=" + shardId + ", gen=0ms (pre-generated)");

            // 3. Calculate total cost (price * quantity)
            long totalCost = dto.price() * dto.quantity();
            BigDecimal reserveAmount = BigDecimal.valueOf(totalCost);

            // 4. Reserve funds via gRPC call to Account service
            long t3 = System.nanoTime();

            boolean reserved = accountClient.reserve(accountId, reserveAmount);
            // boolean reserved = true;
            long grpcMs = (System.nanoTime() - t3) / 1_000_000;

            if (!reserved) {
                log.warn("corrId={} [FAIL] Reserve failed: accountId={}, orderId={}, cost={}, grpc={}ms",
                        correlationId, accountId, orderId, totalCost, grpcMs);
                ResponseUtil.sendError(channel, header, 400, "Insufficient balance");
                metrics.recordOrderRequest(header.getMethodId(), "INSUFFICIENT_BALANCE");
                return;
            }
            traceLog.add("corrId=" + correlationId + " [3.GRPC] ok accountId=" + accountId +
                    ", amount=" + reserveAmount + ", grpc=" + grpcMs + "ms");

            // 5. ë¹„ë™ê¸° DB ì €ì¥ (Outbox Queue)
            OrderEntity order = OrderEntity.from(dto, orderId, accountId);
            boolean queued = outboxQueue.offer(order);

            if (!queued) {
                // í í’€ - ì˜ˆì•½ í•´ì œ í›„ ì—ëŸ¬ ì‘ë‹µ
                log.error("corrId={} Outbox queue full, releasing reserve: accountId={}, orderId={}",
                         correlationId, accountId, orderId);
                //accountClient.unreserve(accountId, reserveAmount);
                ResponseUtil.sendError(channel, header, 503, "Server overloaded");
                metrics.recordOrderRequest(header.getMethodId(), "QUEUE_FULL");
                return;
            }

            // âœ… Redis ì¸ë±ì‹± (ì¦‰ì‹œ, fallbackìš©)
            orderIndexCache.index(orderId, dto.symbol());

            // 6. ì¦‰ì‹œ ì‘ë‹µ ë°˜í™˜ (DB ì»¤ë°‹ ëŒ€ê¸° X)
            OrderResponseDto response = new OrderResponseDto(
                    orderId,
                    OrderProto.OrderStatus.RECEIVED,
                    "Order received"
            );
            ResponseUtil.sendOk(channel, header, response.toProto());
            metrics.recordOrderRequest(header.getMethodId(), "OK");

        } catch (Exception e) {
            log.error("corrId={} Order placement failed", correlationId, e);
            metrics.recordError(e.getClass().getSimpleName());
            metrics.recordOrderRequest(header.getMethodId(), "ERROR");
            ResponseUtil.sendError(channel, header, 500, "Internal order error");
        } finally {
            if (traceEnabled) {
                traceLog.flushAndClear();
            }
            long endTime = System.nanoTime();
            double latencyMs = (endTime - startTime) / 1_000_000.0;
            slowLog.info("corrId={} [END] PlaceOrder {}ms", correlationId, String.format("%.2f", latencyMs));
            metrics.recordOrderLatency(sample, header.getMethodId());
        }
    }
    /**
     * ì£¼ë¬¸ ì·¨ì†Œ ì²˜ë¦¬
     * @param task DispatchHandlerì—ì„œ ìƒ¤ë“œ ë¼ìš°íŒ…ëœ ì‘ì—…
     */
    private void handleCancel(OrderShardExecutor.OrderTask task) {
        OrderCancelDto dto = (OrderCancelDto) task.dto();
        PacketHeader header = task.header();
        Channel channel = task.channel();

        Timer.Sample sample = metrics.startTimer();
        long correlationId = header.getCorrelationId();

        slowLog.info("corrId={} [START] CancelOrder sessionId={}", correlationId, dto.sessionId());
        try {
            // 1. Session validation & get accountId
            Long accountId = sessionRepository.getAccountId(dto.sessionId());
            if (accountId == null) {
                log.warn("corrId={} Invalid session: sessionId={}", correlationId, dto.sessionId());
                metrics.recordOrderRequest(header.getMethodId(), "INVALID_SESSION");
                ResponseUtil.sendError(channel, header, 401, "Invalid session");
                return;
            }
            traceLog.add("corrId=" + correlationId + " [1.SESSION] accountId=" + accountId);

            // 2. DB Transaction: get order amount & mark cancel requested
            Timer.Sample dbSample = metrics.startTimer();
            Long orderAmount = transactionExecutor.execute(tx -> {
                // Get order amount for unreserve
                Long amount = orderRepository.getOrderAmount(tx, dto.orderId(), accountId);
                if (amount == null) {
                    log.warn("corrId={} Order not found: orderId={}, accountId={}",
                            correlationId, dto.orderId(), accountId);
                    return null;
                }

                // Mark cancel requested (atomic check + update)
                boolean marked = orderRepository.markCancelRequested(tx, dto.orderId(), accountId);
                if (!marked) {
                    log.warn("corrId={} Cancel failed: orderId={}, accountId={} (already filled or cancelled)",
                            correlationId, dto.orderId(), accountId);
                    return null;
                }

                // TODO: Insert outbox for gateway cancel request
                // orderRepository.insertCancelOutbox(tx, dto);

                log.info("corrId={} Cancel requested: orderId={}, accountId={}, amount={}",
                        correlationId, dto.orderId(), accountId, amount);
                return amount;
            });
            metrics.recordDbTxDuration(dbSample, header.getServiceId());

            // 3. Unreserve funds if cancel succeeded
            if (orderAmount != null) {
                BigDecimal unreserveAmount = BigDecimal.valueOf(orderAmount);
                boolean unreserved = accountClient.unreserve(accountId, unreserveAmount);
                // boolean unreserved = true;

                traceLog.add("corrId=" + correlationId + " [2.UNRESERVE] ok=" + unreserved + " amount=" + unreserveAmount);
                if (!unreserved) {
                    log.error("corrId={} Unreserve failed after cancel: orderId={}, accountId={}, amount={}",
                            correlationId, dto.orderId(), accountId, orderAmount);
                    // TODO: ë³´ìƒ íŠ¸ëœì­ì…˜ ë˜ëŠ” ì¬ì‹œë„ ë¡œì§ í•„ìš”
                }

                OrderResponseDto response = new OrderResponseDto(
                        dto.orderId(),
                        OrderProto.OrderStatus.CANCEL_REQUESTED,
                        "Cancel request received"
                );
                ResponseUtil.sendOk(channel, header, response.toProto());
                metrics.recordOrderRequest(header.getMethodId(), "OK");
            } else {
                ResponseUtil.sendError(channel, header, 404, "Order not found or cannot be cancelled");
                traceLog.add("corrId=" + correlationId + " [FAIL] cancel rejected");
                metrics.recordOrderRequest(header.getMethodId(), "NOT_FOUND");
            }

        } catch (Exception e) {
            log.error("corrId={} Order cancel failed", correlationId, e);
            metrics.recordError(e.getClass().getSimpleName());
            metrics.recordOrderRequest(header.getMethodId(), "ERROR");
            ResponseUtil.sendError(channel, header, 500, "Internal order error");
        } finally {
            slowLog.info("corrId={} [END] CancelOrder", correlationId);
            metrics.recordOrderLatency(sample, header.getMethodId());
        }
    }
    // ì£¼ë¬¸ ì •ì • - ì¶”í›„ êµ¬í˜„
    private void amend(Channel channel, OrderDto dto){}
}


//# 5) ë¹„ë™ê¸°/ë™ê¸°, ì‘ë‹µÂ·ë¡œê·¸ ìˆœì„œì˜ ì›ì¹™
//
//* **DB íŠ¸ëœì­ì…˜ ë™ê¸°** (í•„ìˆ˜ êµ¬ê°„)
//* **Outbox ì»¤ë°‹ ì´í›„ í´ë¼ ì‘ë‹µ** (ë™ê¸°)
//* **ê²Œì´íŠ¸ì›¨ì´ ë°œí–‰ ë¹„ë™ê¸°** (ì¬ì‹œë„/ë°°ì•• ëŒ€ì‘)
//* **ê²Œì´íŠ¸ì›¨ì´ ì‘ë‹µ ì´ë²¤íŠ¸ ìˆ˜ì‹  â†’ ìƒíƒœ ì—…ë°ì´íŠ¸** (ë¹„ë™ê¸°)
//* **ì‹ ë¢° ë¡œê·¸(WAL/ê°ì‚¬ë¡œê·¸)** : íŠ¸ëœì­ì…˜ ë‚´ append. ìš´ì˜ ë¡œê·¸ëŠ” ë¹„ë™ê¸°.